Remove eviction policy & change vacuum strategy

--- a/Hyperstore/Hyperstore.csproj
+++ b/Hyperstore/Hyperstore.csproj
@@ -83,18 +83,18 @@
     <Compile Include="Extensions\StoreBuilder.cs" />
     <Compile Include="Extensions\StoreExtensions.cs" />
     <Compile Include="HyperGraph\Impls\NodeInfo.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ConstraintProxy.cs" />
-    <Compile Include="Metadata\Impl\Constraints\CheckPropertyConstraintProxy.cs" />
-    <Compile Include="Metadata\Impl\Constraints\CheckValueObjectConstraint.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ConstraintBuilder.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ConstraintContext.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ConstraintsManager.cs" />
-    <Compile Include="Metadata\Impl\Constraints\CheckConstraint.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ICheckValueObjectConstraint.cs" />
-    <Compile Include="Metadata\Impl\Constraints\IConstraintsManager.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ICheckConstraint.cs" />
-    <Compile Include="Metadata\Impl\Constraints\MessageHelper.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ValidateConstraint.cs" />
+    <Compile Include="Metadata\Constraints\ConstraintProxy.cs" />
+    <Compile Include="Metadata\Constraints\CheckPropertyConstraintProxy.cs" />
+    <Compile Include="Metadata\Constraints\CheckValueObjectConstraint.cs" />
+    <Compile Include="Metadata\Constraints\ConstraintBuilder.cs" />
+    <Compile Include="Metadata\Constraints\ConstraintContext.cs" />
+    <Compile Include="Metadata\Constraints\ConstraintsManager.cs" />
+    <Compile Include="Metadata\Constraints\CheckConstraint.cs" />
+    <Compile Include="Metadata\Constraints\ICheckValueObjectConstraint.cs" />
+    <Compile Include="Metadata\Constraints\IConstraintsManager.cs" />
+    <Compile Include="Metadata\Constraints\ICheckConstraint.cs" />
+    <Compile Include="Metadata\Constraints\MessageHelper.cs" />
+    <Compile Include="Metadata\Constraints\ValidateConstraint.cs" />
     <Compile Include="Metadata\Impl\Primitives\EnumPrimitiveInternal.cs" />
     <Compile Include="Metadata\PropertyKind.cs" />
     <Compile Include="Platform\IConcurrentDictionary.cs" />
@@ -176,7 +176,7 @@
     <Compile Include="Commands\SessionMode.cs" />
     <Compile Include="Commands\UndoManager\IUndoManager.cs" />
     <Compile Include="Commands\UndoManager\UndoManager.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ConstraintsExtensions.cs" />
+    <Compile Include="Metadata\Constraints\ConstraintsExtensions.cs" />
     <Compile Include="Commands\Impls\RemovePropertyCommand.cs" />
     <Compile Include="Container\Setting.cs" />
     <Compile Include="DomainModel\DomainPersistenceBehavior.cs" />
@@ -243,8 +243,6 @@
     <Compile Include="HyperGraph\Traversal\IGraphTraversalUnicityPolicy.cs" />
     <Compile Include="MemoryStore\ElementEvictedEventArgs.cs" />
     <Compile Include="MemoryStore\EvictionProcess.cs" />
-    <Compile Include="MemoryStore\Impls\MaxElementsEvictionPolicy.cs" />
-    <Compile Include="MemoryStore\IEvictionPolicy.cs" />
     <Compile Include="HyperGraph\Impls\MemoryGraph\Index\IndexDefinition.cs" />
     <Compile Include="MemoryStore\Impls\ILockInfo.cs" />
     <Compile Include="MemoryStore\Impls\ILockManager.cs" />
@@ -313,7 +311,7 @@
     <Compile Include="Events\IEventNotifier.cs" />
     <Compile Include="Commands\ICommandProcessor.cs" />
     <Compile Include="Commands\Impls\Session\Session.cs" />
-    <Compile Include="Metadata\Impl\Constraints\ExecutionResult.cs" />
+    <Compile Include="Metadata\Constraints\ExecutionResult.cs" />
     <Compile Include="Commands\ISession.cs" />
     <Compile Include="Commands\IExecutionResult.cs" />
     <Compile Include="Commands\DiagnosticMessage.cs" />
