--- a/Hyperstore.XTests/Hyperstore.XTests.csproj
+++ b/Hyperstore.XTests/Hyperstore.XTests.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchemaTests.cs" />
   </ItemGroup>
