--- a/Hyperstore.nuspec
+++ b/Hyperstore.nuspec
@@ -5,14 +5,14 @@
     <version>1.0.0.2</version>
     <title>Hyperstore</title>
     <authors>Zenasoft</authors>
-    <licenseUrl>http://opensource.org/licenses/gpl-3.0</licenseUrl>
-    <iconUrl>http://www.zenasoft.com/wp-content/uploads/2014/04/Logo-Hyperstore1.gif</iconUrl>
+    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
+    <iconUrl>http://www.hypertsore.org/img/hyperstore-icon.png</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>HyperStore is a Database Oriented Model integrating many concepts of DDD and CQRS.</description>
+    <description>HyperStore is a modeling framework providing its own in-memory transactional database.</description>
     <copyright>Copyright Zenasoft 2014</copyright>
     <language>en-US</language>
-    <tags>Hyperstore,DSL,CQRS,DDD</tags>
-    <projectUrl>http://www.zenasoft.com</projectUrl>
+    <tags>Hyperstore,DSL,DDD</tags>
+    <projectUrl>http://www.hyperstore.org</projectUrl>
     <dependencies>
       <group targetFramework=".NETPortable0.0-net45+wp8+win8">
         <dependency id="Microsoft.Bcl.Immutable" version="1.0.34" />
