--- a/Hyperstore.Tests/Hyperstore.Tests.csproj
+++ b/Hyperstore.Tests/Hyperstore.Tests.csproj
@@ -103,6 +103,7 @@
     <Compile Include="MemoryStore\MockTransactionManager.cs" />
     <Compile Include="MemoryStore\SlotListTest.cs" />
     <Compile Include="Metadata\MetaModelTest.cs" />
+    <Compile Include="Mocks\MockDomainModel.cs" />
     <Compile Include="Model\MyCommand.cs" />
     <Compile Include="Model\TestBase.cs" />
     <Compile Include="Model\TestDomainModel.cs" />
@@ -111,6 +112,7 @@
     <Compile Include="Persistence\JSonSerialization.cs" />
     <Compile Include="Persistence\PersistenceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scopes\ScopesControlerTests.cs" />
     <Compile Include="Store\UtilTest.cs" />
     <Compile Include="Store\StoreTest.cs" />
     <Compile Include="ObservableTests.cs" />
