--- a/Hyperstore.Tests/packages.config
+++ b/Hyperstore.Tests/packages.config
@@ -4,4 +4,8 @@
   <package id="Hyperstore.DomainLanguage" version="0.9.268" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
+  <package id="xunit" version="2.0.0-beta4-build2738" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0-beta4-build2738" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0-beta4-build2738" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0-beta4-build2738" targetFramework="net45" />
 </packages>
