--- a/Hyperstore/Hyperstore.csproj
+++ b/Hyperstore/Hyperstore.csproj
@@ -399,8 +399,11 @@
     <Compile Include="Messaging\IEventProcessor.cs" />
     <Compile Include="Messaging\EventProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\ISerializerWriter.cs" />
     <Compile Include="Serialization\JSonDeserializer.cs" />
     <Compile Include="Serialization\JsonReader.cs" />
+    <Compile Include="Serialization\JsonWriter.cs" />
+    <Compile Include="Serialization\SerializerWriter.cs" />
     <Compile Include="Serialization\XmlDeserializer.cs" />
     <Compile Include="Serialization\XmlSerializer.cs" />
     <Compile Include="Serialization\JSonSerializer.cs" />
